--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,6 +20,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
+    - name: Install soffice
+      run: sudo apt-get install soffice
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
