--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         python-version: 3.7
     - name: Install soffice
-      run: sudo apt-get install libreoffice tesseract-ocr-spa
+      run: sudo apt-get install libreoffice tesseract-ocr-spa poppler-utils
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
